# controllers/auth.js
@@ -76,3 +76,42 @@ exports.login = (req, res, next) => {
       next(err);
     });
 };
+
+
+
+exports.updatePassword = (req, res, next) => {
+  const errors = validationResult(req);
+  if (!errors.isEmpty()) {
+    return res.status(404).json({message: errors});
+  }
+  let loggedInUserEmail = req.user.email;
+  const email = req.body.email;
+  const updatedPassword = req.body.updatedPassword;
+  bcrypt
+    .hash(updatedPassword, 12)
+    .then(hashedPw => { 
+
+      if (loggedInUserEmail === email) {
+      User.findOne({ email: email })
+        .then(user => {
+        if (!user) {
+          const error = new Error('A user with this email could not be found.');
+          error.statusCode = 401;
+          throw error;
+        }
+        user.password = hashedPw;
+        return user.save();
+    })
+    .then(result => {
+      res.status(200).json({ message: 'Password updated!' });
+    }) } else 
+      {return res.status(404).json({ message: 'Could not update password.'});
+        }})
+    
+    .catch(err => {
+      if (!err.statusCode) {
+        err.statusCode = 500;
+      }
+      next(err);
+    });
+};
