# routes/auth.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const authController = require('../controllers/auth');
 const router = express.Router();
+const {protected} = require('../middleware');
 const { body } = require('express-validator');
 
 
@@ -17,5 +18,17 @@ router.post('/signup',
     body('email').isEmail()  
   ],
    authController.signup)
+
+
+   router.put('/updatepassword',
+   protected,
+    [
+    body('updatedPassword')
+      .trim()
+      .isLength({ min: 8 })
+      .withMessage("Invalid password")
+      ,
+      body('email').isEmail()
+  ], authController.updatePassword);
 
 module.exports = router;
